--- a/22-transform.qmd
+++ b/22-transform.qmd
@@ -20,105 +20,143 @@ status("drafting", "2022-12-21", section = "Transform")  # drafting, polishing, 
 -   Case Study idea: Decide between log vs non-log transformation
  -->
 ```
-One of the first choices to make when modeling a time series is whether or not it needs to be transformed prior to modeling.
-There are two types of transformation types that typically occur within X13.
+One of the first choices to make when modeling a time series is whether or not it needs to be transformed before modeling.
+Two types of transformation types typically occur within X-13, *prior modifications* and *transformations*.
+
+## Prior modifications and transformations
+
 The first is a prior modification.
 A prior modification scales each observation for known fixed effects.
-These effects can be well known and established such as length of a month/quarter and leap-year or more subjective such as a modification for a workers strike.
-We will see how this comes into the regARIMA model in the next chapter.
-We can think of prior modification factors as events or corrections made to your data that are fixed throughout the adjustment process.
-Additionally, these prior modification factors can be permanent (default) or temporary.
-The difference between permanent and temporary is wheither or not the effect is included back in the final seasonally adjusted series or not; permanent factors are excluded from the final seasonal adjustment while temporary are removed while calculating seasonal factors but then added back to the seasonally adjusted series. 
+These effects can be well-known and established, such as the length of a period or leap-year effects, or they can be more subjective such as a modification for a workers' strike.
+We will see how this comes into the regARIMA model in @sec-regarima. We can think of prior-modification factors as events or corrections made to your data that are fixed throughout the adjustment process.
+These prior modification factors can also be permanent (default) or temporary.
+Permanent modifications are excluded from the final seasonal adjustment.
+Temporary modifications are removed while calculating seasonal factors but added back to the seasonally adjusted series.
 
 The second type is a nonlinear transformation applied to the observations.
-This is typically a choice between logarithmic transform and no transformation but for modeling can be any power of the Box-Cox transformation. 
+This is typically a choice between logarithmic transform and no transformation but for modeling can be any power of the Box-Cox transformation.
 
 ```{r}
-m_none <- seas(AirPassengers, transform.function = 'none')
-m_log  <- seas(AirPassengers, transform.function = 'log')
+m_none <- seas(AirPassengers, transform.function = "none")
+m_log  <- seas(AirPassengers, transform.function = "log")
 ```
 
-## Multiplicative or additive adjustment?
+## Additive and multiplicative adjustment
 
-We seek the decompose our observed series $Y_t$ into trend, seasonal and irregular components.
-$$Y_t = T_t + S_t + I_t.$$
-This decomposition is referred to as an *additive* decomposition.
-If a log transform is used for each component we use a *multiplicative* seasonal decomposition.
-$$Y_t = T_t \cdot S_t \cdot I_t$$
+As you remember from \@sec-introduction, Seasonal adjustment decomposes a time series into a **trend**, a **seasonal**, and an **irregular** component.
+Algebraically, the fundamental identity of seasonal adjustment looks like this:
 
-X-13 has a built in statistical test to decide between log and no transformation.
-This is done with an information criteria based statistical test.
-The choice is made by comparing the AICC value of an Airline model fit, or user specified ARIMA model, to the log transformed series and the original series.
-For all practical purposes this is an effective choice and can be left to the program to decide.
-Note, if your series has negative values it can not be log transformed and no transform is automatically selected by X-13 when automatic transformation is asked for.
-Other restrictions on the allowed transformations exist but these situations are rare.
-We can look at the results of the transformation tests by looking at specific inputs to the UDG file.
+$$Y_t = T_t + S_t + I_t.$$ {#eq-additive}
+
+We seek the decompose our observed series $Y_t$ into a trend $T_t$, a seasonal $S_t$, and an irregular $I_t$ component.
+The formulation above is *additive*, i.e., the trend, the seasonal, and the irregular component sum up to the observed series.
+The goal of seasonal adjustment is to subtract the seasonal component:
+
+$$A_t = Y_t - S_t.$$
+
+For example, an observed value of 100 with a seasonal factor of 3.2 would result in a seasonally adjusted value of 100 - 3.2 = 96.8.
+
+Alternatively, the decomposition can be *multiplicative*:
+
+$$Y_t = T_t \cdot S_t \cdot I_t$$ {#eq-multiplicative}
+
+I.e., the observed series is the product of the trend and the seasonal and irregular components.
+Since these are factors, the goal of seasonal adjustment is to remove seasonality by dividing by the seasonal factor.
+
+$$A_t = \frac{Y_t}{S_t}.$$
+
+For example, an observed value of 100 with a seasonal factor of 1.08 would result in a seasonally adjusted value of 100 / 1.08 = 92.59259.
+Hence for multiplicative models, values of $S_t > 1$ decrease the observed value, and $S_t < 1$ increase it.
+Keep this in mind when viewing seasonal factors such as in the function `monthplot(m)`.
+
+For a multiplicative adjustment, it is sufficient to take logarithms of the initial series and re-transform the results after the decomposition.
+The `transform` spec takes care of this.
+
+## Model choice
+
+X-13 has a built-in statistical test to decide between log and no transformation.
+The choice is made by comparing the AICc[^22-transform-1] value of an ARIMA (0 1 1)(0 1 1) model fit, or a user-specified ARIMA model, to the log-transformed series and the original series.
+
+[^22-transform-1]: With small sample sizes, a standard AIC test may select models with too many parameters.
+    AICc tackles this problem by correcting for sample size.
+
+For most practical purposes, this is an effective choice and can be left to the program to decide.
+If your series has negative values, it can not be log-transformed, and automatic selection is performed.
+Other restrictions on the allowed transformations exist, but these situations are rare.
+We can look at the results of the transformation tests by looking at specific statistics.
+The `udg()` function provides access to a large number of diagnostical statistics.The `qs()` function and the `AIC()`, `BIC()` and `logLik()` methods are wrappers that use `udg()` to access some specific diagnostical statistics.
 
 ```{r}
-library(seasonal)
 m <- seas(AirPassengers)
 udg(m, c("aictest.trans.aicc.nolog", "aictest.trans.aicc.log"))
 ```
 
-We see the AICC for log transformation is lower and hence selected.
-The summary of the seasonal object `summary(m)` tells us this with `Transform: log` displayed.
-The automatically selected transformation can also be found in many other places such as the HTML output with `out(m)` or the udg with argument name *aictrans* such as `udg(m, "aictrans")`.
+We see the AICc for log transformation is lower and hence selected.
+We saw this in @sec-getting-started, were the summary of the seasonal object, `summary(m)`, has told us that `Transform: log`.
+The same infor transformation can also be found in many other places such as the HTML output with `out(m)` or the udg with argument name `aictrans` such as `udg(m, "aictrans")`.
 
-The choice between log and none changes the type of seasonal decomposition that will occur and hence your interpretation of the seasonal factors.
-With no transformation, X13 will do an additive seasonal adjustment $$Y_t = T_t + S_t + I_t.$$ 
-If a long transformation is selected, X13 will do a multiplicative adjustment $$Y_t = T_t \cdot S_t \cdot I_t.$$ 
-One major difference here is the way seasonal factors are interpreted and applied to the observed data to remove seasonality.
-For additive models the seasonal factor is subtracted from the original $$A_t = Y_t - S_t.$$
-For example, an observed value of 100 with seasonal factor of 3.2 would result in a seasonally adjusted value of $100 - 3.2 = 96.8$.
-For multiplicative models the observed data is divided by the seasonal factor $$A_t = \frac{Y_t}{S_t}.$$
-For example, an observed value of 100 with seasonal factor of 1.08 would result in a seasonally adjusted value of $100 / 1.08 = 92.59259$.
-Hence for multiplicative models values of $S_t>1$, decrease the observed value and $S_t < 1$ increase it.
-Keep this in mind with the when viewing seasonal factors such as in the function `monthplot(m)`.
+::: callout-tip
+## X-13 HTML Output
+
+X-13ARIMA-SEATAS has a built-in HTML output that offers an extensive summary of a seasonal adjustment process.
+In R, this can be accessed using the `out()` function.
+E.g.,
+
+```{r, eval = FALSE}
+out(m)
+```
+:::
+
+The choice between `log` and `none` changes the type of seasonal decomposition that will occur and, hence, your interpretation of the seasonal factors.
+With no transformation, X-13 will perform an additive seasonal adjustment specified in @eq-additive.
+If log transformation is selected, X-13 will perform a multiplicative adjustment as specified in @eq-multiplicative.
 
 ## Transform options
 
 The `transform` spec controls these options.
 Some primary options within this spec are
 
-| Spec option  | Use                                            | Example values       | default     |
-|----------------|------------------------|----------------|----------------|
-| function     | specify transform                              | none, log, auto      | none        |
-| data or file | specify prior adjustment factor                | (1.2, 1.1, ..., .99) | (1,1,...,1) |
-| aicdiff      | adjust tolerance of AIC test for log transform | 0.0 3.0 -4.5         | -2.0        |
+| Spec option          | Use                                            | Example values        | default |
+|-----------------|-----------------|----------------------|-----------------|
+| `transform.function` | Transform function                             | `none`, `log`, `auto` | `none`  |
+| `transform.aicdiff`  | adjust tolerance of AIC test for log transform | `0.0`, `3.0`, `-4.5`  | `-2.0`  |
+| `xtrans`             | Prior adjustment factor                        | `seas(m, xreg = y)`   | `NULL`  |
 
-Case Study: AirPassengers series
+## Case Study: `AirPassengers`
 
-We have seen the AirPassengers already it displays all classic signs of requiring a logarithmic transform such as heteroskadasticity.
-Lets verify that the automatic transformation identifies this.
+An increasing variance, also known as *heteroskadasticity* is one sign of requiring a logarithmic transform.
+We have already seen that this is present in `AirPassengers`.
+Let's verify that the automatic transformation identifies this.
 
 ```{r}
-library(seasonal)
-m <- seas(AirPassengers)
 transformfunction(m)
 ```
 
-This is also a good place to get our first look at some of the seasonal factors for an additive vs multiplicative model.
+This is also a good place to get our first look at the seasonal factors.
+The `monthplot()` method offers a convenient way to look at these:
 
 ```{r}
-m <- seas(AirPassengers, 
-          transform.function = "log",
-          x11.save = "d10")
-series(m, "d10") |> head()
 monthplot(m)
 ```
 
+Like the R base `monthplot()` function that can be applied on any time series (also on quarterly time series!), this groups time series data by months.
+If you look at the January (`J`), entry, the blue bars show the evolution of the detrended data from 1949 to 1960.
+The red bar shows the average seasonal factor over these years.
+The smooth red lines show the seasonal factors as estimated by the model.
 
-```{r}
-m <- seas(AirPassengers, 
-          transform.function = "none", 
-          x11.save = "d10")
-series(m, "d10") |> head()
-monthplot(m)
+As you can see from the plot, there are more passengers during the summer months and fewer in the winter.
+The seasonal factors change over time.
+The summer peak becomes more pronounced in later years, while the local peak in February and March disappears over time.
+
+If you want to extract the seasonal factor directly into R, you can use the `series()` function:
+
+``` r
+series(m, "seats.seasonal")
 ```
 
-## Case Study 2: More difficult decision
+## Case Study: More difficult decision
 
-Consider the situaiton where you are trying to decide on transform choices for monthly retail grocery store data.
+Consider the situation where you are trying to decide on transform choices for monthly retail grocery store data.
 The series `grocery` is part of the *seasonalbook* package.
 
 ```{r}
@@ -126,24 +164,24 @@ library(seasonalbook)
 plot(grocery)
 ```
 
-Visual inspection of the series shows no immediate reason to think we need to perform a log transform.
-There is possible seasonal hederoskadasity which could be mitigated by taking logs.
-Perform an X-11 adjustmnet with all of `seasonal` defaults.
+Visual inspection of the series shows no immediate reason to think we need to perform a logarithmic transform.
+There is possible seasonal heteroskadasity which could be mitigated by taking logs.
+Perform an X-11 adjustment with all the defaults of *seasonal*
 
 ```{r}
 m <- seas(grocery, x11 = "")
 udg(m, c("aictest.trans.aicc.nolog", "aictest.trans.aicc.log"))
 ```
 
-This is interesting since the AICC for no transformation is lower than the AICC for log transform.
+This is interesting since the AICc for no transformation is lower than the AICc for log transform.
 
 ```{r}
 transformfunction(m)
 ```
 
-The default value for transform.aicdiff is -2 meaning the program slightly prefers log transform and the difference between the AICC values must exceed 2.
-In this situation we see the difference between the two AICC values is -1.917597.
-If you were to change this option to transform.aicdiff = 0 then the program selects no transform.
+The default value for transform.aicdiff is -2, meaning the program slightly prefers log transform, and the difference between the AICc values must exceed 2.
+In this situation, the difference between the AICc values is -1.917597.
+Suppose you were to change this option to `transform.aicdiff = 0`, then the program selects no transform.
 
 ```{r}
 m2 <- seas(grocery, x11 = "", transform.aicdiff = 2)
