--- a/21-overview.qmd
+++ b/21-overview.qmd
@@ -4,7 +4,7 @@
 #| results: "asis"
 #| echo: false
 source("_common.R")
-status("polishing", "2022-12-21", section = "Overview of the software")  # drafting, polishing, complete
+status("course_complete", "2022-12-21", section = "Overview of the software")  # drafting, polishing, complete
 ```
 
 ```{=html}
