--- a/25-x11.qmd
+++ b/25-x11.qmd
@@ -38,6 +38,32 @@ Before further discussion about the details of the X-11 process, let us see what
 When using the x11 spec you can change the length of the filter used for the trend and seasonal components with the `trendma` and `seasonalma` arguments respectively.
 Additionally, `sigmalim` will control the amount of extreme value adjustment that is done during the seasonal adjustment.
 
+## Simple Seasonal Adjustment proceedure
+
+In order to better understand the X-11 method, it will be helpful to first perform a basic seasonal adjustment proceedure "by-hand". A basic trend filter could be a simple filter with 13 filter weights all equal to 1/13. We use these weights to estimate the trend of the `AirPassengers` series.
+
+```{r}
+filter_wts = rep(1, 13) / 13
+trend_est = stats::filter(x = AirPassengers, filter = filter_wts, sides = 2)
+tsbox::ts_plot(cbind(AirPassengers, trend_est))
+```
+After estimating the trend we now can estimate the seasonal component of the detrended series using a 3x3 seasonal filter that has weights (1,2,3,2,1)/9.
+
+```{r}
+seas_3x3 = c(1, 2, 3, 2, 1) / 9
+seas_est = stats::filter(AirPassengers - trend_est, seas_3x3, sides = 2)
+tsbox::ts_plot(cbind(AirPassengers - trend_est, seas_est))
+```
+
+By subtracting this seasonal estimate we have our crude seasonal adjustment.
+
+```{r}
+SeasonalAdjustment = AirPassengers - seas_est
+tsbox::ts_plot(cbind(AirPassengers, SeasonalAdjustment))
+```
+We see some obvious flaws this this adjustment. Visually, there appears to be residual seasonality and the heteroskedastic variance of the series is not reflected in the seasonal component appropriates. This motivates the X-11 method which is an iterative application of this simple procedure we have just performed. Each subsequent iteration allows the estimated components to be refined by selecting better filters and handling extreme values and regression effects. 
+
+
 ## Additive and multiplicative (again)
 
 The X-13ARIMA-SEATS development was highly motivated to study economic time series.
@@ -78,7 +104,7 @@ To understand the length of a filter let's look at the (finite) number of choice
 
 : Filters available in X11 {#tbl-x11-filters tbl-colwidths="\[30,70\]"}
 
-## Extrem value
+## Extreme value
 
 ::: callout-warning
 ## Related concept: Outlier
@@ -99,3 +125,49 @@ tsbox::ts_plot(
 
 
 ```
+
+
+## Frequency domain of time series (Optional)
+
+We present the following material as optional reading material. For those interesting in simply performing seasonal adjustment, an understanding of the frequency domain of a time series, is not manditory. However, the spectral domain representation will help the interested reader further understand the impact a linear filter has on a time series. Since both X-11 and SEATS use linear filters this will deepen the users understanding of whichever seasonal adjustmnet proceedure is choosen. 
+
+Seasonal adjustment is highly motivated by the study, estimation, and ultimately removal of regular fulutions in a time series. The words *regular fluctuations* immediately leads us to trigonomic functions sin and cos. It turns out, there exist two equivilant representations of a time series. The first, and usually easier for beginners to understand, is the time domain representation. This is expressing how $X_t$ evolves as time $t$ evolves. For example, an MA(1) time domiain representation is:
+$$X_t = w_t + \theta w_{t-1}$$
+The second, is a frequency domain representation of a series. Here, $X_t$ is represented as the sum of trigonometric functions. More specifically, the spectral density of $X_t$ is the fourier transform of the acf of the series. 
+$$f_X(\nu) = \sum_{h = - \infty}^{\infty} \gamma(h) e^{-2\pi i \nu h}$$
+For example, the spectral density of an MA(1) is:
+$$f_X(\nu) = \sigma^2 \left( 1 + \theta^2 + 2\theta\cos(2\pi\nu) \right)$$
+The important concept here is to understand that these representations are equivalent; meaning they contain the same information about a time series, such as encoding the acf function.
+
+::: callout-tip
+## Where does the term ``White Noise'' come from?
+
+The spectral density of an uncorrelated sequence with variance $\sigma^2$ is simply $f(\nu) = \sigma^2$. Notice this is not a function of any frequencies but just a constant for any $\nu$. Hence, it is a stochastic process that equally weight all frequencies in the spectrum. This is precisely where the names white noise comes from as white light has the same property of reflecting all color bands equally, combining to produce white light. 
+:::
+
+Now that we know we can express a time series either in the time domain or as a sum of sin and cosine curves, we get to the important part for seasonal adjustment - how does a linear filter effect the input series? Assume we want to pass a moving-average linear filter over our data $X_t$ with weights $\ldots, w_{-2}, w_{-1}, w_{0}, w_{1}, w_{2}, \ldots$. Assume the output of the linear filter will be $Y_t$ such that
+$$Y_t = \sum_{j = -\infty}^{\infty} w_j X_{t+j} = 
+\ldots + w_{-2}X_{t-2} + w_{-1}X_{t-1} +  w_{0}X_{t} + w_{1}X_{t+1} + w_{2}X_{t+2} + \ldots$$
+This type of linear filter can be expressed as a linear operator in terms of the backshift operator $B$ , where $BX_t = X_{t-1}$ and $B^{-1}X_t = X_{t+1}$.
+$$W(B) = \ldots + w_{-2}B^2 + w_{-1}B +  w_{0} + w_{1}B^{-1} + w_{2}B^{-2} + \ldots$$
+and hence $Y_t = W(B)X_t$. We can now express the spectral density of $Y_t$ in terms of the input spectral density $X_t$.
+$$f_Y(\nu) = \underbrace{\lvert W(e^{2\pi i \nu}) \rvert^2}_{\text{Square Gain Function}} f_X(\nu)$$.
+There is some mathematical machinery needed when understanding exactly what the square-gain function, $\lvert W(e^{2\pi i \nu}) \rvert^2$, is. However, for the sake of this text we just know that it tells us exactly the frequencies of $X_t$ that amplified in the output $Y_t$ as well as the frequencies of $X_t$ that will be annihilated (when the square-gain function equals 0). 
+
+## X-11 Moving average filters
+
+We introduce the moving average filters by plotting the filter weights along with the values of the squared gain fuction. 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
